# sigverification

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  compose.gpu.yaml  compose.yaml  pyproject.toml
models/: gpds_signature_encoder.onnx  manifest.json
scripts/: run_demo.ps1  run_demo.sh
src/signature_verifier/: __init__.py  cli.py  config.py  domain.py  extractor.py  gradio_app.py  ort_session.py  preprocessing.py  runtime.py  service.py
src/signature_verifier/api/: __init__.py  app.py  schemas.py
src/signature_verifier/scanner/: __init__.py  onnx_yolo.py  scan_engine.py  signature_detector.py
tests/: test_api.py  test_domain.py  test_onnx_contract.py  test_preprocessing.py  test_service.py
