[project]
name = "signature-verifier"
version = "1.0.0"
description = "GPDS ONNX signature verification API for financial documents"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115,<1",
    "numpy>=1.26,<3",
    "opencv-python-headless>=4.9,<5",
    "pillow>=10,<13",
    "python-multipart>=0.0.20,<1",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
onnx-cpu = [
    "onnxruntime>=1.22,<2",
]
onnx-gpu = [
    "onnxruntime-gpu[cuda,cudnn]>=1.22,<2; sys_platform == 'linux' or sys_platform == 'win32'",
]
demo = [
    "gradio>=4.44,<6",
]
[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8,<10",
    "ruff>=0.11,<1",
]

[project.scripts]
signature-verifier-check = "signature_verifier.cli:main"
signature-verifier-api = "signature_verifier.api.app:main"
signature-verifier-demo = "signature_verifier.gradio_app:main"
gradio_app = "signature_verifier.gradio_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/signature_verifier"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.uv]
conflicts = [
    [
        { extra = "onnx-cpu" },
        { extra = "onnx-gpu" },
    ],
]

[tool.ruff]
line-length = 100
target-version = "py311"
